--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>JokesWebApp</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>app</version>
     <name>JokesWebApp</name>
     <description>JokesWebApp</description>
     <properties>
